Update OpenAPI
